...
            "state" : "translated",
            "value" : "Confirm new password"
          }
        }
      }
    },
    "새 일정" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New event"
          }
...
            "state" : "translated",
            "value" : "Description"
          }
        }
      }
    },
    "설정" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "state" : "translated",
            "value" : "Delete this and all future events"
          }
        }
      }
    },
    "인사이트" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Insights"
          }
...
            "state" : "translated",
            "value" : "Retry"
          }
        }
      }
    },
    "저장" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
...
            "state" : "translated",
            "value" : "On time"
          }
        }
      }
    },
    "제목" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Title"
          }
...
            "state" : "translated",
            "value" : "Recommended tasks"
          }
        }
      }
    },
    "취소" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
            "state" : "translated",
            "value" : "Activity by category"
          }
        }
      }
    },
    "캘린더" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Calendar"
          }
...
